--- a/src/styles/CSS/WelcomeScreen.css
+++ b/src/styles/CSS/WelcomeScreen.css
@@ -38,6 +38,10 @@
   width: 50%;
   margin: auto;
 }
+.user-form select{
+  width: 25%;
+  margin: auto;
+}
 @media screen and (max-width: 700px){
   .user-form{
     width: calc(100% - 4px);
