--- a/src/styles/CSS/AppBody.css
+++ b/src/styles/CSS/AppBody.css
@@ -42,8 +42,22 @@
   width: 25%;
   margin: auto;
 }
+.user-panel-main{
+  background-color: #fff;
+  width: 50%;
+  padding-bottom: 20px;
+  border: solid 2px #000;
+  border-radius: 25px;
+  margin: 60px auto;
+}
+.user-panel-main h1{
+  margin-bottom: 50px;
+}
 @media screen and (max-width: 700px){
   .user-form{
+    width: calc(100% - 4px);
+  }
+  .user-panel-main{
     width: calc(100% - 4px);
   }
 }
